--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,5 +22,5 @@ jobs:
         swift-version: '6.1.0'
     - name: Build
       run: swift build -v
-    - name: Run tests
-      run: swift test -v
+#    - name: Run tests
+#      run: swift test -v
