--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         swift-version: '6.1.0'
     - name: Build
-      run: swift build -v
-#    - name: Run tests
-#      run: swift test -v
+      run: swift build
+    - name: Run tests
+      run: swift test -v
+
