--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Build
       run: swift build
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild -scheme KVStoreTests -destination "platform=macOS"
 
