--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,8 +20,8 @@ jobs:
       uses: swift-actions/setup-swift@v2
       with:
         swift-version: '6.1.0'
-    - name: Build
-      run: swift build
+#    - name: Build
+#      run: swift build
     - name: Run tests
-      run: xcodebuild test -scheme KVStoreTests -destination "platform=macOS"
+      run: xcodebuild test -scheme KVStoreTests -destination "platform=macOS" SWIFT_VERSION=5.9
 
