--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,8 +22,10 @@ jobs:
         swift-version: '6.1.0'
 #    - name: Build
 #      run: swift build
-    - name: xcodebuild version
-      run: xcodebuild -version
+    - name: Select Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '16.3'
     - name: Run tests
       run: xcodebuild test -scheme KVStoreTests -destination "platform=macOS" SWIFT_VERSION=6.1
 
