--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Swift project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: Swift
+name: Tests
 
 on:
   push:
@@ -20,10 +20,10 @@ jobs:
       uses: swift-actions/setup-swift@v2
       with:
         swift-version: '6.1.0'
-    - name: Select Xcode
+    - name: Setup Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '16.2.0'
-    - name: Run tests
+    - name: Run package tests
       run: xcodebuild test -scheme KVStoreTests -destination "platform=iOS Simulator,OS=18.2,name=iPhone 16" SWIFT_VERSION=6.1
 
